# karere

./: .gitignore  .project-meta.json  CHANGELOG.md  CLAUDE.md  CODEX-PLAN.md  CONTRIBUTING.md  Cargo.toml  FLATHUB_COMPLIANCE.md  README.md  SPELL_CHECKING_COMPLETE.md  SPELL_CHECKING_TEST_GUIDE.md  TODO.md  build.rs  build.sh  check_build.py  clean_po_duplicates.py  deduplicate.py  fix_po_duplicates.py  karere.in  meson.build  meson_options.txt  quick_test.sh  test_build.sh  test_window_fixes.sh
.agent-os/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
.agent-os/specs/2025-07-23-application-foundation/: spec.md  tasks.md
.agent-os/specs/2025-07-23-application-foundation/sub-specs/: technical-spec.md  tests.md
.claude/skills/: release.md
.gemini/commands/: cleanup.toml  plan.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-gst-plugin-audiofx.yml  build-webkitgtk.yml  scheduled-update.yml  update-flatpak.yml
build-aux/: cargo.sh
data/: gschemas.compiled  help-overlay.blp  help-overlay.ui  io.github.tobagin.karere.appdata.xml.in  io.github.tobagin.karere.desktop  io.github.tobagin.karere.desktop.in  io.github.tobagin.karere.gschema.xml  io.github.tobagin.karere.gschema.xml.in  io.github.tobagin.karere.metainfo.xml  io.github.tobagin.karere.metainfo.xml.in  io.github.tobagin.karere.service.in  meson.build  resources.gresource.xml  resources.xml  resources.xml.in  style.css  window.blp  window.ui
data/sounds/: alert.oga  pop.oga  soft.oga  start.oga  whatsapp.oga
data/ui/: keyboard-shortcuts.blp  preferences.blp  preferences.blp.in  shortcuts-dialog.blp  window.blp
docs/: BUILD_VERSIONS.md  FAQ.md  FLATHUB_COMPLIANCE.md  README.md
docs/development/: building.md  contributing.md  testing.md
docs/troubleshooting/: common-issues.md  connectivity.md  performance.md
docs/user-guide/: features.md  getting-started.md  keyboard-shortcuts.md  preferences.md
openspec/: project.md
openspec/changes/add-download-manager/: tasks.md
openspec/changes/add-download-manager/specs/download-manager/: spec.md
openspec/changes/add-download-manager/specs/download-preferences/: spec.md
openspec/changes/archive/2025-10-18-add-download-manager/: design.md  proposal.md
openspec/changes/archive/2025-10-18-add-download-manager/specs/download-notifications/: spec.md
openspec/changes/archive/2025-10-18-migrate-adw-shortcuts-dialog/: proposal.md  tasks.md
openspec/changes/archive/2025-10-18-migrate-adw-shortcuts-dialog/specs/keyboard-shortcuts/: spec.md
openspec/changes/archive/2025-10-18-refactor-naming-and-structure/: design.md  proposal.md
openspec/changes/archive/2025-10-18-refactor-window-components/: proposal.md
openspec/changes/archive/2025-10-18-refactor-window-components/specs/clipboard-manager/: spec.md
openspec/changes/archive/2025-10-18-refactor-window-components/specs/webview-manager/: spec.md
openspec/changes/archive/2025-10-19-fix-spell-checking-system/: IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  design.md  proposal.md  tasks.md
openspec/changes/fix-whatsapp-notification-persistence/: IMPLEMENTATION_STATUS.md  proposal.md  tasks.md
openspec/changes/fix-whatsapp-notification-persistence/specs/webkit-storage/: spec.md
openspec/changes/fix-whatsapp-notification-persistence/specs/webview-manager/: spec.md
openspec/changes/migrate-adw-shortcuts-dialog/: design.md
openspec/changes/migrate-adw-shortcuts-dialog/specs/ui-shortcuts-dialog/: spec.md
openspec/changes/refactor-naming-and-structure/: tasks.md
openspec/changes/refactor-naming-and-structure/specs/build-system/: spec.md
openspec/changes/refactor-naming-and-structure/specs/project-structure/: spec.md
openspec/changes/refactor-window-components/: design.md  tasks.md
openspec/changes/refactor-window-components/specs/webkit-notification-bridge/: spec.md
openspec/changes/refactor-window-components/specs/window-state-manager/: spec.md
openspec/specs/clipboard-manager/: spec.md
openspec/specs/dictionary-discovery/: spec.md
openspec/specs/spell-checking-manager/: spec.md
openspec/specs/spell-checking-ui/: spec.md
openspec/specs/webkit-notification-bridge/: spec.md
openspec/specs/webview-manager/: spec.md
openspec/specs/window-state-manager/: spec.md
packaging/: cargo-sources-gst.json  cargo-sources.json  fonts.conf  gst-plugin-audiofx-builder.yml  io.github.tobagin.karere.Devel.yml  io.github.tobagin.karere.yml  webkitgtk-builder.yml
po/: LINGUAS  POTFILES.in  README.md  ar.po  create_templates.sh  cs.po  de.po  el.po  en_GB.po  en_UK.po  en_US.po  es.po  fi.po  fr.po  ga.po  he.po  hi.po  it.po  it_IT.po  ja.po  karere.pot  kk.po  ko.po  meson.build  nb.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ru.po  sv.po  test_translation.sh  tr.po  zh_CN.po
scripts/: build.sh
snap/: snapcraft.yaml
src/: Application.vala  Config.vala.in  Main.vala  Window.vala  about-dialog.vala  accessibility-manager.vala  accounts.rs  application.vala  config.vala  config.vala.in  crash-reporter.vala  keyboard-shortcuts.vala  logger.vala  main.rs  main.vala  mobile_responsive.js  notification-manager.vala  preferences.rs  preferences.vala  preferences.vala.in  settings-manager.vala  shortcuts-window.vala  spellcheck.rs  tray.rs  utils.vala  webkit-manager.vala  window.rs  window.vala  window.vala.in
src/dialogs/: AboutDialog.vala  PreferencesDialog.vala  ShortcutsDialog.vala
src/managers/: AccessibilityManager.vala  ClipboardManager.vala  DownloadManager.vala  KeyboardShortcuts.vala  NotificationManager.vala  SettingsManager.vala  SpellCheckingManager.vala  TrayManager.vala  WebKitManager.vala  WebKitNotificationBridge.vala  WebKitPermissionManager.vala  WebViewManager.vala  WhatsAppIntegration.vala  WindowStateManager.vala
src/utils/: Constants.vala  DependencyContainer.vala
tests/: test_application.vala  test_build_config.py  test_crash_reporter.vala  test_logger.vala  test_notification_manager.vala  test_runner.vala  test_window.vala
tools/: check_updates.py  flatpak-cargo-generator.py  generate_sources.py  update-po.sh
(+3 files in other folders)
