[package]
name = "karere"
version = "2.3.3"
edition = "2024"

[dependencies]
gtk = { package = "gtk4", version = "0.10.3", features = ["v4_12"] }
libadwaita = { version = "0.8.1", features = ["v1_6"] }
ksni = "0.3.3"
once_cell = "1.21.3"
log = "0.4.29"
env_logger = "0.11.8"
webkit6 = { version = "0.5.0", features = ["v2_42"] }
anyhow = "1.0.100"
glib = "0.21.5"
ashpd = { version = "0.12.1", features = ["gtk4"] }
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time"] }
zbus = "5.13.2"
zbus_macros = "5.13.2"
zbus_names = "4.3.1"
zvariant = "5.9.2"
zvariant_derive = "5.9.2"
zvariant_utils = "3.3.0"
base64 = "0.22.1"
[build-dependencies]
glib-build-tools = "0.21.0"
