[package]
name = "karere"
version = "2.5.6"
edition = "2024"

[dependencies]
gtk = { package = "gtk4", version = "0.11.1", features = ["v4_12"] }
libadwaita = { version = "0.9.1", features = ["v1_6"] }
ksni = "0.3.3"
once_cell = "1.21.4"
log = "0.4.29"
env_logger = "0.11.9"
webkit6 = { version = "0.6.1", features = ["v2_42"] }
anyhow = "1.0.102"
glib = "0.22.3"
ashpd = { version = "0.13.9", features = ["gtk4", "notification", "camera", "background", "open_uri"] }
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time"] }
zbus = "5.14.0"
zbus_macros = "5.14.0"
zbus_names = "4.3.1"
zvariant = "5.10.0"
zvariant_derive = "5.10.0"
zvariant_utils = "3.3.0"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
cairo-rs = { version = "0.22.0", features = ["png"] }
pango = "0.22.0"
pangocairo = "0.22.0"
[build-dependencies]
glib-build-tools = "0.22.0"
